basic-discovery-demo/apigateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apigateway
    discovery.solo.io/function_discovery: enabled        
  name: apigateway
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: apigateway
---
# No FDS, we have the swagger in a different spot /foo/bar/swagger.json
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apigateway
    discovery.solo.io/function_discovery: enabled   
  name: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
        acme.cert-manager.io/http-domain: "3214871549"
        acme.cert-manager.io/http-token: "984681993"
        acme.cert-manager.io/http01-solver: "true"         
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: istioinaction/apigateway-swagger:latest
        imagePullPolicy: IfNotPresent
        name: apigateway
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
