basic-discovery-demo/petstore-any.yaml

##########################
#                        #
#        Example         #
#        Service         #
#                        #
#                        #
##########################
# petstore service
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petstore
    discovery.solo.io/function_discovery: enabled
  name: petstore
spec:
  selector:
    matchLabels:
      app: petstore
  replicas: 1
  template:
    metadata:
      labels:
        app: petstore
    spec:
      containers:
      - image: soloio/petstore-example:latest
        name: petstore
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: petstore
  labels:
    service: petstore
    discovery.solo.io/function_discovery: enabled    
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: petstore
